# DHL_front_tests

./: .gitignore  README.md  pyproject.toml
front/: __init__.py
front/elements/: __init__.py  add_to_cart.py  product_sku.py  search_line.py  wrapper.py
front/helpers/: __init__.py  load_page.py
front/pages/: __init__.py  mainpage.py  product_page.py
tests/: conftest.py
tests/mainpage/: search.py  tracker.py
tests/product_page/: must_have_elems.py
